conf/icql-devops/jenkins/svc-jenkins.yaml
# service
---
kind: Service
apiVersion: v1
metadata:
  name: svc-jenkins
  namespace: icql-devops
  labels:
    app: svc-jenkins
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: pod-jenkins
